# bittorrent-client-rs

./: Cargo.toml  Makefile  README.md
client/: Cargo.toml
client/src/: client.rs  lib.rs
client/src/protocol/: meta_info_file.rs  mod.rs  peer_wire.rs  tracker.rs  transport.rs
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
