[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
byteorder = "1.5.0"
async-trait = "0.1.74"
thiserror = "1.0.50"
log = "0.4"
env_logger = "0.10.1"
bytes = "1"
hex = "0.4.3"
serde_bencode = "^0.2.4"
serde = "^1.0.0"
serde_derive = "^1.0.0"
serde_bytes = "0.11.12"
sha1 = "0.10.6"
reqwest = "0.11"
urlencoding = "2.1.3"
rand = "0.8.5"